Update cursor position when textfield text changes.

Bug: 789190
Change-Id: I1f1b2546d126ad35e27bd977e17b295477e10938