ui/views/controls/textfield/textfield.cc
@@ -342,6 +342,7 @@ void Textfield::SetTextInputFlags(int flags) {
 void Textfield::SetText(const base::string16& new_text) {
   model_->SetText(new_text);
   OnCaretBoundsChanged();
+  UpdateAfterChange(true /* text_changed */, true /* cursor_changed */);
   SchedulePaint();
   NotifyAccessibilityEvent(ui::AX_EVENT_VALUE_CHANGED, true);
 }
